--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -48,6 +48,7 @@
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -96,6 +97,7 @@
     </Compile>
     <Compile Include="TestUsingDatabase.cs" />
     <Compile Include="TestUtil.cs" />
+    <Compile Include="Util\TestConfigFileSettings.cs" />
     <Compile Include="Util\TestDateTimeUtilities.cs" />
     <Compile Include="Util\TestReflectionUtilities.cs" />
     <Compile Include="Util\File\CsvTestsSamples.cs" />
