Added support for setting an enum property value using a string. Added DialogUtilities to Habanero.UI.Win.

--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -207,6 +207,7 @@
     <Compile Include="..\Common\AssemblyInfoShared.cs">
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
+    <Compile Include="Util\DialogUtilities.cs" />
     <Compile Include="Wizard\MessageWizardStepWin.cs">
       <SubType>UserControl</SubType>
     </Compile>
