Finished aggregate relationships.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -130,18 +130,20 @@
     <Compile Include="BusinessObjectCollection\TestBusinessObjectCollection_CreateBO.cs" />
     <Compile Include="BusinessObjectCollection\TestOrderCriteria.cs" />
     <Compile Include="BusinessObjectCollection\TestRelatedBoCol_Added.cs" />
+    <Compile Include="BusinessObjectCollection\TestRelatedBOCol_Aggregation.cs" />
     <Compile Include="BusinessObjectCollection\TestRelatedBOCol_Created.cs" />
     <Compile Include="BusinessObjectCollection\TestRelatedBoCol_Edits.cs" />
     <Compile Include="BusinessObjectCollection\TestRelatedBusinessObjectCollection.cs" />
     <Compile Include="BusinessObjectCollection\TestUtilsRelated.cs" />
-    <Compile Include="BusxinessObjectLoader\TestBusinessObjectLoader.cs" />
-    <Compile Include="BusxinessObjectLoader\TestBusinessObjectLoaderWithInheritance.cs" />
-    <Compile Include="BusxinessObjectLoader\TestBusinessObjectLoader_GetBusinessObjectCollection.cs" />
-    <Compile Include="BusxinessObjectLoader\TestBusinessObjectLoader_RefreshCollection.cs" />
+    <Compile Include="BusinessObjectLoader\TestBusinessObjectLoader.cs" />
+    <Compile Include="BusinessObjectLoader\TestBusinessObjectLoaderWithInheritance.cs" />
+    <Compile Include="BusinessObjectLoader\TestBusinessObjectLoader_GetBusinessObjectCollection.cs" />
+    <Compile Include="BusinessObjectLoader\TestBusinessObjectLoader_RefreshCollection.cs" />
     <Compile Include="BusinessObjectCollection\TestRelatedBOCol_Composition.cs" />
     <Compile Include="CriteriaManager\TestCriteriaDB.cs" />
     <Compile Include="CriteriaManager\TestCriteriaParser.cs" />
     <Compile Include="CriteriaManager\TestHabaneroStringBuilder.cs" />
+    <Compile Include="Relationship\TestSingleRelationship_Aggregation.cs" />
     <Compile Include="Relationship\TestSingleRelationship_Composition.cs" />
     <Compile Include="Security\TestBOPropAuthorisation.cs" />
     <Compile Include="Security\TestBusinessObjectAuthorisation.cs" />
@@ -182,20 +184,20 @@
     <Compile Include="TestBORegistry.cs" />
     <Compile Include="TestBusinessObjectManager.cs" />
     <Compile Include="CriteriaManager\TestCriteria.cs" />
-    <Compile Include="BusxinessObjectLoader\TestQueryBuilderWithInheritance.cs" />
-    <Compile Include="BusxinessObjectLoader\TestSource_Join.cs" />
-    <Compile Include="BusxinessObjectLoader\TestSource_JoinList.cs" />
-    <Compile Include="BusxinessObjectLoader\TestSqlFormatter.cs" />
+    <Compile Include="BusinessObjectLoader\TestQueryBuilderWithInheritance.cs" />
+    <Compile Include="BusinessObjectLoader\TestSource_Join.cs" />
+    <Compile Include="BusinessObjectLoader\TestSource_JoinList.cs" />
+    <Compile Include="BusinessObjectLoader\TestSqlFormatter.cs" />
     <Compile Include="TestDataStoreInMemory.cs" />
     <Compile Include="TestBusinessObjectLastUpdatePropertiesLog.cs" />
     <Compile Include="TestBusinessObjectUpdateLog.cs" />
     <Compile Include="TestNumberGenerator.cs" />
     <Compile Include="TestPropertyComparer.cs" />
-    <Compile Include="BusxinessObjectLoader\TestQueryBuilder.cs" />
-    <Compile Include="BusxinessObjectLoader\TestSelectQuery.cs" />
-    <Compile Include="BusxinessObjectLoader\TestSelectQueryDB.cs" />
-    <Compile Include="BusxinessObjectLoader\TestSource.cs" />
-    <Compile Include="BusxinessObjectLoader\TestSourceDB.cs" />
+    <Compile Include="BusinessObjectLoader\TestQueryBuilder.cs" />
+    <Compile Include="BusinessObjectLoader\TestSelectQuery.cs" />
+    <Compile Include="BusinessObjectLoader\TestSelectQueryDB.cs" />
+    <Compile Include="BusinessObjectLoader\TestSource.cs" />
+    <Compile Include="BusinessObjectLoader\TestSourceDB.cs" />
     <Compile Include="TestPropertyLink.cs" />
     <Compile Include="TestTransactionCommitter.cs" />
     <Compile Include="Relationship\TestMultipleRelationship.cs" />
@@ -263,7 +265,7 @@
     <Compile Include="TestTransactionCommitterHelper.cs" />
     <Compile Include="TestTransactionCommitterInMemory.cs" />
     <Compile Include="TestTransactionLogger.cs" />
-    <Compile Include="Relationship\TestUnrefRelationshipDef.cs" />
+    <Compile Include="Relationship\TestMultipleRelationshipDef.cs" />
     <Compile Include="TestUtils.cs" />
     <Compile Include="TransactionCommitterStub.cs" />
   </ItemGroup>
