Added Adding to aggregate and associate relationships.  Started on correcting Associations to the proposed behaviour (only updating foreign keys of children when saving).  Moved tests around.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -145,6 +145,9 @@
     <Compile Include="CriteriaManager\TestCriteriaDB.cs" />
     <Compile Include="CriteriaManager\TestCriteriaParser.cs" />
     <Compile Include="CriteriaManager\TestHabaneroStringBuilder.cs" />
+    <Compile Include="Relationship\TestMultipleRelationship_Aggregation.cs" />
+    <Compile Include="Relationship\TestMultipleRelationship_Association.cs" />
+    <Compile Include="Relationship\TestMultipleRelationship_Composition.cs" />
     <Compile Include="Relationship\TestSingleRelationship_Aggregation.cs" />
     <Compile Include="Relationship\TestSingleRelationship_Association.cs" />
     <Compile Include="Relationship\TestSingleRelationship_Composition.cs" />
