Fixed a bug in PanelBuilder where rowspan was not working correctly. Added support DeleteRelatedChildren and CheckForDuplicate for inmemory transaction.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -339,6 +339,7 @@
     <Compile Include="SupportsAutoIncrementingFieldBO.cs" />
     <Compile Include="TransactionalBusinessObject.cs" />
     <Compile Include="TransactionalBusinessObjectDB.cs" />
+    <Compile Include="TransactionalBusinessObjectInMemory.cs" />
     <Compile Include="TransactionCommitterDB.cs" />
     <Compile Include="TransactionCommitter.cs" />
     <Compile Include="TransactionCommitterInMemory.cs" />
