Got association relationship updating working for InMemory. Still to do SQL statement creation. Fixed a few functionality holes in the relationships (such as removing from a collection not setting the reverse relationship's relatedbo to null).

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -346,6 +346,7 @@
     <Compile Include="TransactionalBusinessObject.cs" />
     <Compile Include="TransactionalBusinessObjectDB.cs" />
     <Compile Include="TransactionalBusinessObjectInMemory.cs" />
+    <Compile Include="TransactionalSingleRelationship.cs" />
     <Compile Include="TransactionCommitterDB.cs" />
     <Compile Include="TransactionCommitter.cs" />
     <Compile Include="TransactionCommitterInMemory.cs" />
