--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -88,6 +88,7 @@
     <Compile Include="TestButton.cs" />
     <Compile Include="TestCheckBox.cs" />
     <Compile Include="TestComboBox.cs" />
+    <Compile Include="TestEnumerationConverter.cs" />
     <Compile Include="TestEnumerations.cs" />
     <Compile Include="TestForm.cs" />
     <Compile Include="TestGridWithPanelControl.cs">
