Added PersonTestBO to help in the testing of the GridAndBOEditor control. Made changes to OrganisationTestBO to help testing of the GridAndBOEditor control. Added a failing test to TestPanelBuilder for the case when you have both a row and col span and the grid size is not calculating correctly. Added the GridAndBOEditor Control and the ExtendedComboBoxMapper and ExtendedComboBox control. Also made an PictureBoxWin as a call through to the System.Windows.Forms PictureBox, this was required for Hilti. Added DateTimePickerMapperStrategy so added the ValueChanged event on the DateTimePicker.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -177,6 +177,7 @@
     <Compile Include="TestBusinessObjectLoader.cs" />
     <Compile Include="TestBusinessObjectManager.cs" />
     <Compile Include="CriteriaManager\TestCriteria.cs" />
+    <Compile Include="TestPack\PersonTestBO.cs" />
     <Compile Include="TestQueryBuilderWithInheritance.cs" />
     <Compile Include="TestSource_Join.cs" />
     <Compile Include="TestSource_JoinList.cs" />
