--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -78,12 +78,17 @@
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
     <Compile Include="ButtonsControl\TestButtonGroupControl.cs" />
+    <Compile Include="Mappers\TestExtendedLookupComboBoxMapper.cs" />
     <Compile Include="PanelBuilder\TestPanelBuilder.cs" />
     <Compile Include="PanelBuilder\TestPanelInfo.cs" />
     <Compile Include="TestButton.cs" />
     <Compile Include="TestCheckBox.cs" />
-    <Compile Include="TestComboBox.cs" />
+    <Compile Include="TestComboBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TestExtendedComboBox.cs" />
     <Compile Include="TestForm.cs" />
+    <Compile Include="TestGridAndBOEditorControl.cs" />
     <Compile Include="TestGroupBox.cs" />
     <Compile Include="TestNumericUpDown.cs" />
     <Compile Include="TestProgressBar.cs" />
@@ -190,6 +195,10 @@
     <ProjectReference Include="..\Habanero.Test.Bo\Habanero.Test.BO.csproj">
       <Project>{D624008C-47BA-44CC-9CC8-DCEC9F0005B3}</Project>
       <Name>Habanero.Test.BO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Habanero.Test.Structure\Habanero.Test.Structure.csproj">
+      <Project>{D59DAD41-663F-4AD7-9B22-04C2A7D7F9C2}</Project>
+      <Name>Habanero.Test.Structure</Name>
     </ProjectReference>
     <ProjectReference Include="..\Habanero.Test\Habanero.Test.csproj">
       <Project>{B965CBBC-48BE-4761-9AB8-8F1AD17B8537}</Project>
