--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -61,10 +61,16 @@
     <Compile Include="ControlInterfaces\IFileChooser.cs" />
     <Compile Include="ControlInterfaces\IFormHabanero.cs" />
     <Compile Include="ControlInterfaces\IListControl.cs" />
+    <Compile Include="ControlInterfaces\IPictureBox.cs" />
     <Compile Include="ControlInterfaces\IStaticDataEditor.cs" />
     <Compile Include="ControlInterfaces\IUserControlHabanero.cs" />
     <Compile Include="ControlMappers\ComboBoxCollectionSelector.cs" />
     <Compile Include="ControlMappers\DateTimePickerMapper.cs" />
+    <Compile Include="ControlMappers\ExtendedComboBoxMapper.cs" />
+    <Compile Include="IBOEditorPanel.cs" />
+    <Compile Include="IBusinessObjectControlWithErrorDisplay.cs" />
+    <Compile Include="IGridAndBOEditorControl.cs" />
+    <Compile Include="IExtendedComboBox.cs" />
     <Compile Include="DateTimePicker\DateTimePickerManager.cs" />
     <Compile Include="FormController.cs" />
     <Compile Include="Grid\DataGridViewManager.cs" />
