--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BOEditorPanelWin.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="ComboBoxAutoCompleteSourceWin.cs" />
     <Compile Include="ComboBoxAutoCompleteModeWin.cs" />
     <Compile Include="BOColTabControlWin.cs">
@@ -72,6 +75,7 @@
     <Compile Include="DateRangeComboBoxWin.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="DateTimePickerMapperStrategyWin.cs" />
     <Compile Include="DateTimePickerWin.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -93,6 +97,9 @@
     <Compile Include="ErrorProviderWin.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ExtendedComboBoxWin.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="FileChooserWin.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -102,6 +109,9 @@
     <Compile Include="FormExceptionNotifier.cs" />
     <Compile Include="FormWin.cs">
       <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GridAndBOEditorControlWin.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="GridBaseWin.cs">
       <SubType>Component</SubType>
@@ -155,6 +165,9 @@
     </Compile>
     <Compile Include="OKCancelDialogFactoryWin.cs" />
     <Compile Include="PanelWin.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="PictureBoxWin.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ProgressBarWin.cs">
