--- a/source/Habanero.Db/Habanero.Db.csproj
+++ b/source/Habanero.Db/Habanero.Db.csproj
@@ -1,7 +1,7 @@
 ﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{80FEC63C-DBD7-4DAE-882D-9CB93F738B48}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -173,6 +173,7 @@
     <Compile Include="SqlStatement.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="SqlStatementBuilder.cs" />
     <Compile Include="SqlStatementCollection.cs">
       <SubType>Code</SubType>
     </Compile>
