--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -225,6 +225,7 @@
     <Compile Include="BusinessObjectLoader\TestSource.cs" />
     <Compile Include="BusinessObjectLoader\TestSourceDB.cs" />
     <Compile Include="TestPropertyLink.cs" />
+    <Compile Include="TestRelKey.cs" />
     <Compile Include="TransactionCommitters\TestTransactionalBusinessObject.cs" />
     <Compile Include="TransactionCommitters\TestTransactionCommitter.cs" />
     <Compile Include="Relationship\TestMultipleRelationship.cs" />
