Further work on FilterDefs Removed the auto-reverse-relationship-find functionality, and updated all test relationships to have the correct reverse relationship set.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -102,6 +102,7 @@
     <Compile Include="DateTimeToday.cs" />
     <Compile Include="Exceptions\InvalidObjectIdException.cs" />
     <Compile Include="Exceptions\InvalidXmlDefinitionException.cs" />
+    <Compile Include="FilterModes.cs" />
     <Compile Include="HabaneroApp.cs" />
     <Compile Include="Criteria\HabaneroStringBuilder.cs" />
     <Compile Include="IApplicationVersionUpgrader.cs" />
